ci: Add turboRepo cache on deploy build

--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -20,6 +20,9 @@ jobs:
       - run: npm ci
 
       - run: npm run build
+       env:
+          TURBO_TOKEN: ZSMtNoQLyAnypGtKrPA3Wbqs
+          TURBO_TEAM: leao
 
       - name: Deploy storybook
         working-directory: ./packages/docs
