--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@ignite-ui/react",
-  "version": "2.0.1",
+  "name": "@jf-ignite-ui/react",
+  "version": "3.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -12,9 +12,9 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@ignite-ui/eslint-config": "*",
-    "@ignite-ui/tokens": "*",
-    "@ignite-ui/ts-config": "*",
+    "@jf-ignite-ui/eslint-config": "*",
+    "@jf-ignite-ui/tokens": "*",
+    "@jf-ignite-ui/ts-config": "*",
     "@types/react": "^18.2.75",
     "@types/react-dom": "^18.2.24",
     "react": "^18.2.0",
